Fix slideshow image height / no more jumping

--- a/css/sass/_header.scss
+++ b/css/sass/_header.scss
@@ -497,7 +497,7 @@ div.crumbs {
 			left: $grid-gutter-width / 2;
 			display: block;
 			width: 100%;
-			//height: $home-slide-height;
+			height: $home-slide-height;
 		}
 	}
 }
